--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.11"
 dependencies = [
+    "accelerate>=1.12.0",
+    "diffusers>=0.36.0",
     "open-clip-torch>=3.2.0",
 ]
 
