--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "accelerate>=1.12.0",
     "diffusers>=0.36.0",
     "open-clip-torch>=3.2.0",
+    "transformers>=4.57.3",
 ]
 
 [dependency-groups]
