--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires      = ["setuptools", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "teflm"
+name = "tvln"
 dynamic = ["version"]
 description = "Unofficial implementation of arxiv 2302.4222"
 readme = "README.md"
@@ -24,11 +24,11 @@ dev = [
 ]
 
 [project.scripts]
-teflm = "teflm.main:main"
+tvln = "tvln.main:main"
 
 [tool.setuptools.packages.find]
 where   = ["."]
-include = ["teflm*"]
+include = ["tvln*"]
 exclude = ["tests*"]
 
 [tool.setuptools_scm]
